# gtfs-processing

./: Flujo de datos.bpm  README.md  experimentos.py  getSchedule.py  horarios.csv
Itinerarios/: PO 2016(01Jul al 31Dic) UN1 - Anexo 5.xlsx  PO 2016(02Jul al 31Dic) UN6 - Anexo 5.xlsx
cargaBip/: metro24-08-2016-oficio-47702013.csv  pcma24082016-oficio-47702013.csv  pcmav-alto-estandar24082016-oficio-47702013.csv  pcmav-estandar-normal24082016-oficio-47702013.csv  preprocesaCargaBip.py  retail24-08-2016-oficio-47702013.csv
gtfs/: gtfs.py
horarios/: getSchedule.py  tablaConversionGTFSvMediciones.txt
inputs/: GTFS_Calama_2020_06_25.rar  eliminaFinLineaWindows.sh  procesaGTFS.par  resources_map.txt  resources_map_master.txt
inputs/GTFS_Calama_2020_06_15/: agency.txt  calendar.txt  feed_info.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
inputs/GTFS_Calama_2020_06_25/: calendar.txt  feed_info.txt  routes.txt  shapes.txt  stop_times.txt  trips.txt
inputs/GTFS_Calama_2020_08_28/: agency.txt  feed_info.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
inputs/GTFS_Calama_2020_10_08_/: agency.txt  calendar.txt  feed_info.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
inputs/GTFS_Calama_kmls/: chequeo.kml
inputs/GTFS_Transantiago_2020_12_26/: calendar.txt  calendar_dates.txt  feed_info.txt  frequencies.txt  routes.txt  stops.txt  trips.txt
inputs/GTFS_Transantiago_2021_05_04/: calendar.txt  calendar_dates.txt  feed_info.txt  frequencies.txt  routes.txt  stops.txt  trips.txt
inputs/GTFS_Transantiago_2022_01_15/: calendar.txt  feed_info.txt  frequencies.txt  stops.txt  trips.txt
inputs/GTFSs/: lista.txt
inputs/bip/: .~lock.bip_point.xlsx#  PhoneFairPoints.csv  PhoneFairPoints_.csv  ProcesarPuntosBip.py  bip_center_high_level.xlsx  bip_center_standard_level.xlsx  bip_point.xlsx  checksum  tmp  (+2 more)
output/: Calamav1.rar  Calamav2.rar
preInspector/: CMakeLists.txt  main.cpp  preInspector.kdev4
preInspector/.kdev4/: preInspector.kdev4
preInspector/IO/: FuenteDatos.cpp  FuenteDatos.h  Parametros.cpp
preInspector/IO/Tablas/: TablaDistanciaEnRutaParadas.h  TablaParadas.cpp  TablaParadas.h  TablaPuntoCarga.cpp  TablaRutasSimplificadas.h  TablaRutasTramadas.cpp  TablaRutasTramadas.h  TablaServiciosParaAndroid.h  TablaServiciosPorParadaParaAndriod.cpp  TablaServiciosPorParadaParaAndriod.h  TablaServiciosPorParadasPorSecuencia.cpp  TablaServiciosPorParadasPorSecuencia.h
procesaGTFS/: procesaGTFS.sln  versionamiento.txt
procesar/: dicSS.txt  procesaGTFS.par  run.sh  secParadas.txt
src/gtfsTransapp/: CMakeLists.txt  gtfsTransapp.kdev4  main.cpp
src/gtfsTransapp/.kdev4/: gtfsTransapp.kdev4
src/gtfsTransapp/IO/: FuenteDatos.cpp  FuenteDatos.h  Parametros.cpp  Parametros.h  ReporteFuenteDatos.cpp
src/gtfsTransapp/IO/Tablas/: TablaDistanciaEnRutaParadas.cpp  TablaDistanciaEnRutaParadas.h  TablaGrilla.cpp  TablaGrilla.h  TablaParadas.cpp  TablaPuntoCarga.cpp  TablaRutasSimplificadas.cpp  TablaServicios.h  TablaServiciosParaAndroid.cpp  TablaServiciosPorParada.cpp  TablaServiciosPorParadaParaAndriod.cpp  TablaServiciosPorParadaParaAndriod.h  TablaServiciosPorParadasPorSecuencia.cpp
src/gtfsTransapp/IO/Visualizacion/: ColorScale.h  Visualizaciones.cpp
src/gtfsTransapp/Transporte/Diccionarios/: DiccionarioServicios.cpp
src/gtfsTransapp/Transporte/Grid/: Cell.h
src/gtfsTransapp/Transporte/Paraderos/: SecuenciaParaderos.cpp  SecuenciaParaderos.h
src/gtfsTransapp/Transporte/Rutas/: Ruta.h
src/gtfsTransapp/Utilidades/: StringFunctions.h  Types.h
(+722 files in other folders)
